--- a/cms/public/index.html
+++ b/cms/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="http://www.eecs.ucf.edu/cssd/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="author" content="Kika Wingert" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>UCF CMS</title>
+    <title>Computer Science Senior Design</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
